# dioconsult-website

./: docker-compose.yml
dio-website/: .env.example  README.md  pyproject.toml  requirements.txt  utils.py
dio-website/ai/: apps.py  blocks.py  models.py  rest.py  signals.py  wagtail_hooks.py
dio-website/ai/migrations/: 0001_initial.py
dio-website/base/: forms.py  models.py  views.py  wagtail_hooks.py
dio-website/base/migrations/: 0001_initial.py  0002_initial.py  0003_alter_contactsettings_section_description.py
dio-website/base/models/: __init__.py  contact.py  footer.py  header.py  site.py
dio-website/base/templatetags/: navigation_tags.py
dio-website/career/: models.py
dio-website/career/migrations/: 0001_initial.py
dio-website/career/templatetags/: career_tags.py
dio-website/chat/: constants.py  rest.py  serializers.py  views.py
dio-website/config/: urls.py  wsgi.py
dio-website/config/settings/: base.py  dev.py  production.py
dio-website/config/templates/: base.html
dio-website/core/: wagtail_hooks.py
dio-website/feedback/: forms.py  models.py  views.py  wagtail_hooks.py
dio-website/feedback/migrations/: 0001_initial.py
dio-website/home/: apps.py  blocks.py  models.py
dio-website/home/migrations/: 0001_initial.py
dio-website/hr_pages/: __init__.py  apps.py  signals.py  urls.py  views.py  wagtail_hooks.py
dio-website/hr_pages/forms/: vacancy.py
dio-website/hr_pages/migrations/: 0001_initial.py
dio-website/hr_pages/models/: __init__.py  career.py  vacansy.py
dio-website/hr_pages/views/: vacancy.py
dio-website/notification/: email.py  models.py  utils.py  views.py  wagtail_hooks.py  wagtailadmin_tags.py
dio-website/notification/migrations/: 0001_initial.py
dio-website/pages/migrations/: 0001_initial.py  0002_aboutpage_certificatesindexpage_contactpage_faqpage_and_more.py  0003_productcategory_programspage_productpage.py
dio-website/templates/: base.html
dio-website/tickets/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
dio-website/vacancy/: apps.py  forms.py
(+89 files in other folders)
