[project]
name = "dio-website"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.2",
    "django-extensions>=4.1",
    "dotenv>=0.9.9",
    "psycopg>=3.3.3",
    "psycopg2-binary>=2.9.11",
    "ruff>=0.15.2",
    "wagtail>=7.3",
    "wagtailmenus>=4.0.6",
]

[tool.ruff]
# Базовые настройки
line-length = 120
indent-width = 4
target-version = "py313"
cache-dir = ".cache/ruff"

exclude = [
    ".git",
    ".venv",
    ".ruff_cache",
    ".pytest_cache",
    ".mypy_cache",
    "migrations",             # миграции Django почти всегда игнорируют
    "venv",
    "node_modules",
    "static",                 # скомпилированный фронт
    "media",
    "__pycache__",
]

extend-exclude = [
    "config/settings/*.py",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "B",
    "C4",
    "UP",
    "RUF",
    "ANN",
    "ARG",
    "DJ",
    "PIE",
    "SIM",
    "RET",
    "ERA",
    "PGH",
    "PL",
    "TRY",
    "S",
]

ignore = [
    "E501",
    "DJ001",
    "ANN101",
    "ANN102",
    "ANN401",
    "PLR0913",
    "PLR2004",
    "PLW2901",
    "TRY003",
    "S101",
    "COM812",
    "ISC001",
]

# Пер-файловые исключения (очень полезно!)
[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = [
    "E501", "F841", "F401", "ERA001", "ARG001", "ARG002"
]
"**/tests/*.py" = [
    "S101",     # assert в тестах
    "ANN",      # аннотации в тестах не всегда нужны
    "ARG001",   # unused-argument — часто в фикстурах
]
"config/settings/*.py" = [
    "E501", "F401", "F403", "F405"  # импорты *, длинные строки
]
"**/admin.py" = ["ANN", "ARG001"]
"**/models.py" = ["DJ001"]

[tool.ruff.lint.pydocstyle]
convention = "google"   # или "numpy", "pep257"

# Для форматирования docstring-кода
docstring-code-format = true
docstring-code-line-length = "dynamic"
